# AICMMS

./: .env.example  .gitignore  AICMMS_Specs070326.docx  pyproject.toml
.claude/: settings.local.json
docs/: architecture-azure.md  architecture.md  gen_diagrams.py
src/cafm/: __init__.py
src/cafm/ai/: __init__.py  context.py  dataset_builder.py  embedding_store.py  feature_store.py  interfaces.py
src/cafm/api/: __init__.py  __main__.py  app.py  auth.py  config.py  dependencies.py  middleware.py  websocket.py
src/cafm/connectors/: __init__.py  base.py  factory.py  lifecycle.py  registry.py
src/cafm/core/: __init__.py  config.py  events.py  exceptions.py  logging.py  types.py
src/cafm/domain/: __init__.py  assets.py  costs.py  documents.py  enums.py  facilities.py  gamification.py  inspections.py  maintenance.py  occupancy.py  sensors.py  technicians.py  vendors.py  work_orders.py
src/cafm/integration/: __init__.py  manager.py  pipeline.py  scheduler.py  sync.py  transforms.py
src/cafm/models/: __init__.py  base.py  mapping.py  record.py  resultset.py
src/cafm/repository/: __init__.py  base.py  file_repository.py  mongo_repository.py  sql_repository.py  unit_of_work.py
src/cafm/schema/: __init__.py  diff.py  discovery.py  models.py  serialization.py
src/cafm/services/: __init__.py  asset_service.py  connector_service.py  cost_service.py  dashboard_service.py  document_service.py  facility_service.py  gamification_service.py  inspection_service.py  maintenance_service.py  occupancy_service.py  query_service.py  (+4 more)
tests/: conftest.py
tests/fixtures/: sample_assets.csv
tests/unit/: test_api_config.py  test_api_schemas.py  test_domain_models.py  test_embedding_store.py  test_events.py  test_middleware.py  test_new_schemas.py  test_new_services.py  test_registry.py  test_schema_models.py  test_services.py  test_transforms.py  test_types.py  test_unified_record.py  test_websocket.py
(+55 files in other folders)
